# cpack-deb-systemd-demo

./: CMakeLists.txt  README.md  main.cpp
config/systemd/: demo.service
debian/: postinst.in  postrm.in  prerm.in
